<resources>
    <string name="app_name">Yati</string>
    <string name="basic_details">BASIC DETAILS</string>
    <string name="title">Title*</string>
    <string name="gender">Gender*</string>
    <string name="date_of_birth">Date Of Birth*</string>
    <string name="home_menu">Home</string>
    <string name="product_menu">Product</string>
    <string name="refer_menu">Refer</string>
    <string name="myProfile_menu">My Profile</string>
    <string name="profile_text">Profile</string>
    <string name="address_text">Address</string>
    <string name="my_services_text">My Services</string>
    <string name="book_service_text">Book Service</string>
    <string name="my_bikes_text">My Bikes</string>
    <string name="my_point_history_text">My Point History</string>
    <string name="help_text">Help</string>
    <string name="sign_out_text">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name*</string>
    <string name="marital_status">Marital Status</string>
    <string name="email">Email*</string>
    <string name="profile_button">Save Change</string>
    <string name="add_birthday">Add birthday</string>

    <string name="phone">Phone*</string>
    <string name="l_name">Last Name*</string>

    <string name="add_mobile_number">Add mobile number</string>
    <string name="add_anniversary_day">Add anniversary</string>
    <string name="milage">kmpl</string>
    <string name="power">cc</string>
    <string name="power_unit">ps</string>
    <string name="gravity">Nm</string>
    <string name="logIn_instruction"> Password must be at least 8 characters. With at least 1 number and 1 special character</string>
    <string name="pass_stre_weak">Weak</string>
    <string name="pass_stre_medium">Good</string>
    <string name="pass_stre_strong">Strong</string>
    <string name="preferred_data_and_time">"Preferred date and time "</string>
    <string name="purchase_date">Your vehicle purchase date</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="service_type">Service Type</string>
    <string name="pick_up_my_vehicale">Pick Up My Vehicle</string>
    <string name="feedback_editText">Type issue in the bike</string>
    <string name="save_button">Book</string>
    <string name="add_button">Add</string>
    <string name="logIn_phone">Enter your Email Id</string>
    <string name="logIn_password">Enter password</string>
    <string name="enter_your_first_name">First Name</string>
    <string name="enter_your_last_name">Last Name</string>
    <string name="enter_your_email">Email</string>
    <string name="enter_your_phone_no">Mobile Number</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_button">Register</string>
    <string name="elixir_of_life">Elixir of Life</string>
    <string name="register_here">Fill Your Details Here!</string>
    <string name="don_t_have_account">Don\'t have Account !</string>
    <string name="enter_bike_name">Your bike name</string>
    <string name="earn_points">100 Points</string>
    <string name="know_your_bike">Know your Bike</string>
    <string name="service_history">Service History</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="service_status">Transaction</string>
    <string name="transection_number">2432424542543</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_phone">Phone</string>
    <string name="user_email">Email</string>
    <string name="login_button">Login</string>
    <string name="refer_insruction">Refer your friend to us, and they\'ll each get 200 points instead of 100. On top of that, we\'ll give you 100 points for each friend that book their first service with us</string>
    <string name="invite_button">Invite</string>
    <string name="registration_no">Registration no</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="not_information">You don\'t have any information</string>
    <string name="fotget_pass_tittle">Forgot Password</string>
    <string name="help_tittle">Help</string>
    <string name="coupon_tittle">Coupons</string>
    <string name="book_service_tittle">Book Service</string>
    <string name="address_tittle">Address</string>
    <string name="my_bikes_tittle">My Bikes</string>
    <string name="my_point_history_tittle">My Points History</string>
    <string name="my_service_tittle">My Service</string>
    <string name="profile_tittle">Profile</string>
    <string name="web_view_title">Web View</string>
    <string name="no_value_in_coupon">You don\'t have any Coupon.</string>
    <string name="contact_us">Contact Us</string>
    <string name="details">Discover our office locations and different ways to contact us so that we can provide you with the support you need</string>
    <string name="contact_number">Contact Number :</string>
    <string name="email_id">Email Id :</string>
    <string name="dealer_num">+91 9534780001</string>
    <string name="dealer_email">yatiautomobiles@gmail.com</string>
    <string name="showroom_price">Ex-showroom price, Patna</string>
    <string name="rate_service">Rate this service now</string>
    <string name="rate_review">Rate Review</string>
    <string name="verify_phone_number">Verify Phone Number</string>


</resources>