<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HelpActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:subtitleTextColor="@color/colorWhite"
        app:title="@string/help_tittle"
        app:titleTextColor="@color/colorWhite"
        android:theme="@style/Widget.AppCompat.ActionBar"
        android:background="@drawable/nav_header_style"/>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="350dp"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="120dp"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_vertical"
        app:cardBackgroundColor="#BAFFFFFF"
        android:layout_marginBottom="22dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:background="@drawable/card_border">

        <TextView
            android:id="@+id/contact_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/contact_us"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/info_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@id/contact_textView"
           android:gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/details"
            android:textSize="14sp"
            android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:drawableLeft="@drawable/ic_outline_phone"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:textSize="16sp"
                android:layout_below="@id/info_textView"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/dealer_num" />

            <TextView
                android:id="@+id/email_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:layout_below="@id/number_text"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_outline_email"
                android:text="@string/dealer_email"
                android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/makeCall_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/button_style"
            android:drawableLeft="@drawable/ic_baseline_phone"
            android:paddingLeft="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/email_textView"
            android:layout_gravity="center"
            android:textColor="#0323F4"
            android:text="Call" />

    </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>


