<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="16dp"
    android:layout_height="wrap_content"
    android:background="#000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/scooter_imageView"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/productScooter_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorBlack"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:textSize="15sp"
            android:text="@string/showroom_price"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:orientation="horizontal"
            android:layout_marginStart="13dp">

            <ImageView
                android:id="@+id/rupyaLogo_imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/rupya_logo"
                android:layout_marginRight="5dp" />
            <TextView
                android:id="@+id/price_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/scooter_mileage_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/milage"
                    android:layout_marginStart="5dp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/scooter_enginePower_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/power"
                    android:layout_marginStart="2dp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/scooter_powerUnit_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/power_unit"
                    android:layout_marginStart="2dp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/scooter_gravity_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/gravity"
                    android:layout_marginStart="2dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_baseline_favorite_border_24" />

        <Button
            android:id="@+id/add_bike_btn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_width="185dp"
            android:layout_height="34dp"
            android:background="@color/colorAccent"
            android:text="Add your bike"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/book_now_btn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_width="185dp"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="Book now"
            android:textColor="@color/colorWhite" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>
